# app.startupai.site

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .mcp.json  AGENTUITY_IMPLEMENTATION_PROMPT.md  APPLY_MIGRATION_MANUAL.md  ARCHITECTURE_RECOMMENDATIONS.md  CLAUDE.md  CLAUDE.md.backup  CONSULTANT_VS_FOUNDER_CLARIFICATION.md  CREWAI_DEPLOYMENT_FIXED.md  CREWAI_FIX_COMPLETE.md  CREWAI_SPEC_COMPARISON.md  CREWAI_STATUS_REPORT.md  DASHBOARD_INTEGRATION_PRIORITIES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SCRIPT.md  DEPLOY_NOW.sh  DOCUMENTATION_INDEX.md  FUNCTION_IMPROVEMENTS_COMPLETE.md  GCP_DEPLOYMENT_GUIDE.md  NETLIFY_ENV_VARS.md  NEXT-STEPS.md  OAUTH_FIX_COMPLETE.md  ONBOARDING_FAILURE_ANALYSIS.md  ONBOARDING_TO_CREWAI_ARCHITECTURE.md  PHASE_0_PROGRESS.md  PRODUCTION_DEPLOY.md  PR_DESCRIPTION.md  README.md  STAGE_PROGRESSION_IMPLEMENTATION.md  START_HERE.md  STEP_9_TEST_RESULTS.md  TESTING_CHECKLIST.md  cloudbuild.yaml  consultants_amendment.md  copy-migration.sh  debug-auth.js  (+18 more)
.agent/: PLANS.md
.claude/: project.md  settings.json  settings.local.json
agentuity-agent/: agentuity.yaml  main.py  pyproject.toml  requirements.txt
agentuity-agent/agentuity_agents/Onboarding/: agent.py  conversation_handler.py
backend/: .dockerignore  .env.example  CREW_AI.md  Dockerfile  README.md  STEP3_SUMMARY.md  diagnose-backend.cjs  package-lock.json  package.json  requirements.txt  test-runner.cjs  test_enhanced_tools.py  test_tools.py  verify_setup.py  vitest.config.js
backend_legacy/: package.json  server.js  vitest.setup.js
docs/: README.md  (+16 more)
(+1667 files in other folders)
