[project]
name = "startupai"
version = "0.1.0"
description = "A project to bring AI founders to assist in the development of Startups"
requires-python = ">=3.10, <3.13"
dependencies = [
    "agentuity>=0.0.106",
    "openai>=2.6.1",
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langchain-community>=0.3.5",
    "supabase>=2.10.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
]
